test/parse/relaxed/bad/zeronozeroinvline.sol
s SATISFIABLE
v 1 0 2 0
